--- a/app/src/style/directive.styl
+++ b/app/src/style/directive.styl
@@ -242,6 +242,7 @@ for i in 6..20
 
       .remove
         width 35px
+        -webkit-flex none
 
       .receipt
         margin-left 4px
